challenge and solution refactor did it
