# src/controller/solution/index.ts
@@ -1,5 +1,5 @@
 import { Post , Controller, Route, Body, Delete , Path, Patch, Get , Request} from 'tsoa'
-import { TYPE_SOLUTION } from '../../models/solutions';
+import { SolutionI } from '../../models/situation.solutions';
 import { newSolution, updateSolutionPartially, deleteSolution, getSolution} from '../../repository/solution';
 import { UserRequest } from '../users';
 
@@ -17,14 +17,23 @@ export interface SolutionBody {
     file_name?: string
 }
 
+export interface SolutionResponse {
+    solutionId: string,
+    challenge?:{
+        created: Date,
+        description: string,
+        
+    }
+}
+
 @Route('solution')
 export default class SolutionController extends Controller {
     @Post()
-    public async newSolution (@Body() body:SolutionBody, @Request() user: UserRequest): Promise<TYPE_SOLUTION> {
+    public async newSolution (@Body() body:SolutionBody, @Request() user: UserRequest): Promise<SolutionI> {
         return newSolution(body, user)
     }
     @Patch(':solutionId')
-    public async updateSolutionPartially(@Body() body:SolutionBody, @Path('solutionId') solutionId: string): Promise<TYPE_SOLUTION>{
+    public async updateSolutionPartially(@Body() body:SolutionBody, @Path('solutionId') solutionId: string): Promise<SolutionI>{
         return updateSolutionPartially(body, solutionId)
     }
     @Delete(':solutionId')
@@ -32,7 +41,7 @@ export default class SolutionController extends Controller {
         return deleteSolution(solutionId)
     }
     @Get(':solutionId')
-    public async getSolution(@Path('solutionId') solutionId:string ,@Request() solution: TYPE_SOLUTION): Promise<TYPE_SOLUTION> {
+    public async getSolution(@Path('solutionId') solutionId:string ,@Request() solution: SolutionI): Promise<SolutionI> {
         return getSolution(solutionId, solution)
     }
 }
